test/spec_vectors/simd_splat/fail/module_8.wat
(module (func (result v128) i32x4.splat (i64.const 2)))